[package]
authors = ["{{authors}}"]
edition = "2018"
readme = "README.md"
name = "{{project-name}}"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
# panic-halt = "0.2.0"
log = "0.4.2"
rtt-target = "0.5.0"
panic-rtt-target = {version = "0.1.1", features = ["cortex-m"]}
stm32f1xx-hal = {version = "0.10.0", features = ["rt", "stm32f103", "medium"]}

[[bin]]
name = "{{project-name}}"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true
